--- a/examples/conprof.yaml
+++ b/examples/conprof.yaml
@@ -1,6 +1,6 @@
 scrape_configs:
-- job_name: 'conprof'
-  scrape_interval: 1s
-  scrape_timeout: 1s
+- job_name: 'tidb'
+  scrape_interval: 1m
+  scrape_timeout: 1m
   static_configs:
-  - targets: ['localhost:10902']
+  - targets: ['0.0.0.0:10080', '0.0.0.0:10081']
