--- a/examples/conprof.yaml
+++ b/examples/conprof.yaml
@@ -1,6 +1,11 @@
 scrape_configs:
 - job_name: 'tidb'
-  scrape_interval: 1m
-  scrape_timeout: 1m
+  scrape_interval: 5s
+  scrape_timeout: 10s
+  profiling_config:
+    pprof_config:
+      profile:
+        enabled: true
+        seconds: 5
   static_configs:
-  - targets: ['0.0.0.0:10080', '0.0.0.0:10081']
+  - targets: ['0.0.0.0:10080']
