--- a/examples/conprof.yaml
+++ b/examples/conprof.yaml
@@ -1,6 +1,6 @@
 scrape_configs:
 - job_name: 'tidb'
-  scrape_interval: 1m
-  scrape_timeout: 1m
+  scrape_interval: 10s
+  scrape_timeout: 10s
   static_configs:
-  - targets: ['0.0.0.0:10080', '0.0.0.0:10081']
+  - targets: ['0.0.0.0:10080']
