store debug=2 goroutine
Signed-off-by: crazycs520 <crazycs520@gmail.com>

--- a/examples/cluster.yaml
+++ b/examples/cluster.yaml
@@ -7,6 +7,8 @@ scrape_configs:
       profile:
         enabled: true
         seconds: 5
+      goroutine:
+        debug: 2
       threadcreate:
         enabled: false
   static_configs:
@@ -20,6 +22,8 @@ scrape_configs:
       profile:
         enabled: true
         seconds: 5
+      goroutine:
+        debug: 2
       threadcreate:
         enabled: false
   static_configs:
